fix spacing

--- a/src/index.css
+++ b/src/index.css
@@ -69,7 +69,7 @@ span {
 }
 
 .carousel-item {
-  min-height: 60vh;
+  min-height: 65vh;
 }
 
 @media (min-width: 992px) {
